--- a/assets/sass/templates/_product-single.scss
+++ b/assets/sass/templates/_product-single.scss
@@ -8,6 +8,17 @@
     margin-bottom: $spacing-lg; // Reduced from XL
 }
 
+/* RTL Support for WooCommerce Product Gallery Floats */
+[dir="rtl"] .woocommerce div.product {
+    div.images {
+        float: right;
+    }
+
+    div.summary {
+        float: left;
+    }
+}
+
 /* Variation selectors (native and custom swatches) */
 .variations {
     width: 100%;
@@ -22,8 +33,8 @@
         text-transform: uppercase;
         margin-bottom: 10px;
         color: $color-text;
-        text-align: left;
-        margin-left: 4px; // User requested left push
+        text-align: start; // RTL fix
+        margin-inline-start: 4px; // RTL fix
     }
 
     .value {
