--- a/assets/sass/organisms/_header.scss
+++ b/assets/sass/organisms/_header.scss
@@ -136,13 +136,8 @@
 }
 
 
-/* Ensure the wrapping div doesn't break flex */
-.menu-wrapper>div.nav-menu {
-    padding: 0 $spacing-md;
-    width: 100%;
-}
-
-.menu-wrapper div.nav-menu>ul {
+/* Menu Navigation Styles */
+.menu-wrapper ul.nav-menu {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -155,10 +150,12 @@
         flex-direction: row;
         gap: 25px;
         justify-content: flex-end;
+        align-items: center;
     }
 
     li {
         position: relative;
+        padding: 0;
     }
 
     a {
@@ -171,6 +168,7 @@
         letter-spacing: 0.05em;
         transition: color 0.3s ease;
         padding: 5px 0;
+        display: inline-block;
 
         &:hover {
             color: $color-primary;
