style button cart

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -26,6 +26,7 @@
 @use 'organisms/testimonials';
 
 // WooCommerce Templates
+@use 'templates/cart';
 @use 'templates/checkout';
 @use 'templates/product-single';
 @use 'templates/shop';
